# ego-bench

./: README.md  package.json  pyproject.toml  vercel.json
configs/: default_weights.json  example_manifest.csv
src/video_benchmark/: __init__.py  acceleration.py  cli.py  config.py
src/video_benchmark/llm/: gemini_reviewer.py
src/video_benchmark/metrics/: __init__.py  base.py  brightness.py  continuity.py  hand_detection.py  sharpness.py  stability.py
src/video_benchmark/output/: console.py  csv_export.py  json_export.py
src/video_benchmark/pipeline/: frame_sampler.py  orchestrator.py  segment_extractor.py
src/video_benchmark/scoring/: aggregator.py  grader.py  scorer.py
src/video_benchmark/sources/: __init__.py  base.py  local.py  manifest.py  s3.py
tests/: conftest.py  test_metrics.py  test_pipeline.py  test_scoring.py  test_sources.py
web/: index.html  package.json  tsconfig.json  vite.config.ts  wrangler.toml
web/src/: App.tsx  app.css  main.tsx  runtime-assets.ts  types.ts
web/src/components/: agent-step.tsx  file-upload.tsx  metrics-panel.tsx  sidebar.tsx  top-bar.tsx  verdict.tsx
web/src/gpu/: blur.ts  brightness.ts  buffer-cache.ts  context.ts  optical-flow.ts  pixel-buffer.ts  sharpness.ts
web/src/gpu/shaders/: blur.wgsl  brightness.wgsl  (+2 more)
web/src/metrics/: audio.ts  body-mapping.ts  hand-detection.ts  limb-labeling.ts  scorer.ts  segmentation-worker.ts  segmentation.ts  temporal.ts
web/src/ui/: export.ts
web/src/video/: frame-extractor.ts  frame-previews.ts
web/src/wasm/: frame-analysis.ts  frame-analysis.wasm  frame-analysis.wat
(+1 files in other folders)
